# tensorflow-neuroimaging

./: README.md  pyproject.toml  requirements.txt
tensorflow_neuroimaging/augmentation/: __init__.py  augmenter.py  mri_augmenter.py
tensorflow_neuroimaging/augmentations/: __init__.py
tensorflow_neuroimaging/augmentations/augmentations/: __init__.py  affine_mri_augmenter.py  flip.py  mri_augmenter.py
tensorflow_neuroimaging/augmentations/samplers/: numerical_samplers.py  sampler.py
tensorflow_neuroimaging/cli/: verify_mgh_loader.py
tensorflow_neuroimaging/loaders/: __init__.py  mgh.py  nifti.py
tensorflow_neuroimaging/nifti/: load.py
tests/: conftest.py  test_affine_mri_augmenter.py  test_flip.py  test_mri_augmenter.py  test_numerical_sampler.py
